# modules/gamers/gamerspb/api.pb.go
@@ -232,6 +232,185 @@ func (x *DisapproveGamerResponse) GetId() string {
 	return ""
 }
 
+type GetGamerRequest struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Id string `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`
+}
+
+func (x *GetGamerRequest) Reset() {
+	*x = GetGamerRequest{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_gamerspb_api_proto_msgTypes[4]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *GetGamerRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetGamerRequest) ProtoMessage() {}
+
+func (x *GetGamerRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_gamerspb_api_proto_msgTypes[4]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetGamerRequest.ProtoReflect.Descriptor instead.
+func (*GetGamerRequest) Descriptor() ([]byte, []int) {
+	return file_gamerspb_api_proto_rawDescGZIP(), []int{4}
+}
+
+func (x *GetGamerRequest) GetId() string {
+	if x != nil {
+		return x.Id
+	}
+	return ""
+}
+
+type GetGamerResponse struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Gamer *Gamer `protobuf:"bytes,1,opt,name=gamer,proto3" json:"gamer,omitempty"`
+}
+
+func (x *GetGamerResponse) Reset() {
+	*x = GetGamerResponse{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_gamerspb_api_proto_msgTypes[5]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *GetGamerResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetGamerResponse) ProtoMessage() {}
+
+func (x *GetGamerResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_gamerspb_api_proto_msgTypes[5]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetGamerResponse.ProtoReflect.Descriptor instead.
+func (*GetGamerResponse) Descriptor() ([]byte, []int) {
+	return file_gamerspb_api_proto_rawDescGZIP(), []int{5}
+}
+
+func (x *GetGamerResponse) GetGamer() *Gamer {
+	if x != nil {
+		return x.Gamer
+	}
+	return nil
+}
+
+type GetGamersRequest struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+}
+
+func (x *GetGamersRequest) Reset() {
+	*x = GetGamersRequest{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_gamerspb_api_proto_msgTypes[6]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *GetGamersRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetGamersRequest) ProtoMessage() {}
+
+func (x *GetGamersRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_gamerspb_api_proto_msgTypes[6]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetGamersRequest.ProtoReflect.Descriptor instead.
+func (*GetGamersRequest) Descriptor() ([]byte, []int) {
+	return file_gamerspb_api_proto_rawDescGZIP(), []int{6}
+}
+
+type GetGamersResponse struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Gamers []*Gamer `protobuf:"bytes,1,rep,name=gamers,proto3" json:"gamers,omitempty"`
+}
+
+func (x *GetGamersResponse) Reset() {
+	*x = GetGamersResponse{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_gamerspb_api_proto_msgTypes[7]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *GetGamersResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetGamersResponse) ProtoMessage() {}
+
+func (x *GetGamersResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_gamerspb_api_proto_msgTypes[7]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetGamersResponse.ProtoReflect.Descriptor instead.
+func (*GetGamersResponse) Descriptor() ([]byte, []int) {
+	return file_gamerspb_api_proto_rawDescGZIP(), []int{7}
+}
+
+func (x *GetGamersResponse) GetGamers() []*Gamer {
+	if x != nil {
+		return x.Gamers
+	}
+	return nil
+}
+
 var File_gamerspb_api_proto protoreflect.FileDescriptor
 
 var file_gamerspb_api_proto_rawDesc = []byte{
@@ -254,7 +433,18 @@ var file_gamerspb_api_proto_rawDesc = []byte{
 	0x02, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x02, 0x69, 0x64, 0x22, 0x29, 0x0a,
 	0x17, 0x44, 0x69, 0x73, 0x61, 0x70, 0x70, 0x72, 0x6f, 0x76, 0x65, 0x47, 0x61, 0x6d, 0x65, 0x72,
 	0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x0e, 0x0a, 0x02, 0x69, 0x64, 0x18, 0x01,
-	0x20, 0x01, 0x28, 0x09, 0x52, 0x02, 0x69, 0x64, 0x32, 0xb7, 0x01, 0x0a, 0x0d, 0x47, 0x61, 0x6d,
+	0x20, 0x01, 0x28, 0x09, 0x52, 0x02, 0x69, 0x64, 0x22, 0x21, 0x0a, 0x0f, 0x47, 0x65, 0x74, 0x47,
+	0x61, 0x6d, 0x65, 0x72, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x0e, 0x0a, 0x02, 0x69,
+	0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x02, 0x69, 0x64, 0x22, 0x39, 0x0a, 0x10, 0x47,
+	0x65, 0x74, 0x47, 0x61, 0x6d, 0x65, 0x72, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12,
+	0x25, 0x0a, 0x05, 0x67, 0x61, 0x6d, 0x65, 0x72, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x0f,
+	0x2e, 0x67, 0x61, 0x6d, 0x65, 0x72, 0x73, 0x70, 0x62, 0x2e, 0x47, 0x61, 0x6d, 0x65, 0x72, 0x52,
+	0x05, 0x67, 0x61, 0x6d, 0x65, 0x72, 0x22, 0x12, 0x0a, 0x10, 0x47, 0x65, 0x74, 0x47, 0x61, 0x6d,
+	0x65, 0x72, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x22, 0x3c, 0x0a, 0x11, 0x47, 0x65,
+	0x74, 0x47, 0x61, 0x6d, 0x65, 0x72, 0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12,
+	0x27, 0x0a, 0x06, 0x67, 0x61, 0x6d, 0x65, 0x72, 0x73, 0x18, 0x01, 0x20, 0x03, 0x28, 0x0b, 0x32,
+	0x0f, 0x2e, 0x67, 0x61, 0x6d, 0x65, 0x72, 0x73, 0x70, 0x62, 0x2e, 0x47, 0x61, 0x6d, 0x65, 0x72,
+	0x52, 0x06, 0x67, 0x61, 0x6d, 0x65, 0x72, 0x73, 0x32, 0xc4, 0x02, 0x0a, 0x0d, 0x47, 0x61, 0x6d,
 	0x65, 0x72, 0x73, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x4c, 0x0a, 0x0b, 0x43, 0x72,
 	0x65, 0x61, 0x74, 0x65, 0x47, 0x61, 0x6d, 0x65, 0x72, 0x12, 0x1c, 0x2e, 0x67, 0x61, 0x6d, 0x65,
 	0x72, 0x73, 0x70, 0x62, 0x2e, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x47, 0x61, 0x6d, 0x65, 0x72,
@@ -266,19 +456,27 @@ var file_gamerspb_api_proto_rawDesc = []byte{
 	0x65, 0x47, 0x61, 0x6d, 0x65, 0x72, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x21, 0x2e,
 	0x67, 0x61, 0x6d, 0x65, 0x72, 0x73, 0x70, 0x62, 0x2e, 0x44, 0x69, 0x73, 0x61, 0x70, 0x70, 0x72,
 	0x6f, 0x76, 0x65, 0x47, 0x61, 0x6d, 0x65, 0x72, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65,
-	0x22, 0x00, 0x42, 0xb4, 0x01, 0x0a, 0x0c, 0x63, 0x6f, 0x6d, 0x2e, 0x67, 0x61, 0x6d, 0x65, 0x72,
-	0x73, 0x70, 0x62, 0x42, 0x08, 0x41, 0x70, 0x69, 0x50, 0x72, 0x6f, 0x74, 0x6f, 0x50, 0x01, 0x5a,
-	0x5a, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x61, 0x2d, 0x61, 0x73,
-	0x6c, 0x61, 0x6e, 0x69, 0x2d, 0x64, 0x65, 0x76, 0x2f, 0x67, 0x6f, 0x6c, 0x61, 0x6e, 0x67, 0x5f,
-	0x6d, 0x6f, 0x6e, 0x6f, 0x6c, 0x69, 0x74, 0x68, 0x5f, 0x65, 0x76, 0x65, 0x6e, 0x74, 0x5f, 0x64,
-	0x72, 0x69, 0x76, 0x65, 0x6e, 0x5f, 0x61, 0x72, 0x63, 0x68, 0x69, 0x74, 0x65, 0x63, 0x74, 0x75,
-	0x72, 0x65, 0x2f, 0x67, 0x61, 0x6d, 0x65, 0x72, 0x73, 0x2f, 0x67, 0x61, 0x6d, 0x65, 0x72, 0x73,
-	0x70, 0x62, 0x2f, 0x67, 0x61, 0x6d, 0x65, 0x72, 0x73, 0x70, 0x62, 0xa2, 0x02, 0x03, 0x47, 0x58,
-	0x58, 0xaa, 0x02, 0x08, 0x47, 0x61, 0x6d, 0x65, 0x72, 0x73, 0x70, 0x62, 0xca, 0x02, 0x08, 0x47,
-	0x61, 0x6d, 0x65, 0x72, 0x73, 0x70, 0x62, 0xe2, 0x02, 0x14, 0x47, 0x61, 0x6d, 0x65, 0x72, 0x73,
-	0x70, 0x62, 0x5c, 0x47, 0x50, 0x42, 0x4d, 0x65, 0x74, 0x61, 0x64, 0x61, 0x74, 0x61, 0xea, 0x02,
-	0x08, 0x47, 0x61, 0x6d, 0x65, 0x72, 0x73, 0x70, 0x62, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f,
-	0x33,
+	0x22, 0x00, 0x12, 0x43, 0x0a, 0x08, 0x47, 0x65, 0x74, 0x47, 0x61, 0x6d, 0x65, 0x72, 0x12, 0x19,
+	0x2e, 0x67, 0x61, 0x6d, 0x65, 0x72, 0x73, 0x70, 0x62, 0x2e, 0x47, 0x65, 0x74, 0x47, 0x61, 0x6d,
+	0x65, 0x72, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x1a, 0x2e, 0x67, 0x61, 0x6d, 0x65,
+	0x72, 0x73, 0x70, 0x62, 0x2e, 0x47, 0x65, 0x74, 0x47, 0x61, 0x6d, 0x65, 0x72, 0x52, 0x65, 0x73,
+	0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x00, 0x12, 0x46, 0x0a, 0x09, 0x47, 0x65, 0x74, 0x47, 0x61,
+	0x6d, 0x65, 0x72, 0x73, 0x12, 0x1a, 0x2e, 0x67, 0x61, 0x6d, 0x65, 0x72, 0x73, 0x70, 0x62, 0x2e,
+	0x47, 0x65, 0x74, 0x47, 0x61, 0x6d, 0x65, 0x72, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74,
+	0x1a, 0x1b, 0x2e, 0x67, 0x61, 0x6d, 0x65, 0x72, 0x73, 0x70, 0x62, 0x2e, 0x47, 0x65, 0x74, 0x47,
+	0x61, 0x6d, 0x65, 0x72, 0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x00, 0x42,
+	0xb4, 0x01, 0x0a, 0x0c, 0x63, 0x6f, 0x6d, 0x2e, 0x67, 0x61, 0x6d, 0x65, 0x72, 0x73, 0x70, 0x62,
+	0x42, 0x08, 0x41, 0x70, 0x69, 0x50, 0x72, 0x6f, 0x74, 0x6f, 0x50, 0x01, 0x5a, 0x5a, 0x67, 0x69,
+	0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x61, 0x2d, 0x61, 0x73, 0x6c, 0x61, 0x6e,
+	0x69, 0x2d, 0x64, 0x65, 0x76, 0x2f, 0x67, 0x6f, 0x6c, 0x61, 0x6e, 0x67, 0x5f, 0x6d, 0x6f, 0x6e,
+	0x6f, 0x6c, 0x69, 0x74, 0x68, 0x5f, 0x65, 0x76, 0x65, 0x6e, 0x74, 0x5f, 0x64, 0x72, 0x69, 0x76,
+	0x65, 0x6e, 0x5f, 0x61, 0x72, 0x63, 0x68, 0x69, 0x74, 0x65, 0x63, 0x74, 0x75, 0x72, 0x65, 0x2f,
+	0x67, 0x61, 0x6d, 0x65, 0x72, 0x73, 0x2f, 0x67, 0x61, 0x6d, 0x65, 0x72, 0x73, 0x70, 0x62, 0x2f,
+	0x67, 0x61, 0x6d, 0x65, 0x72, 0x73, 0x70, 0x62, 0xa2, 0x02, 0x03, 0x47, 0x58, 0x58, 0xaa, 0x02,
+	0x08, 0x47, 0x61, 0x6d, 0x65, 0x72, 0x73, 0x70, 0x62, 0xca, 0x02, 0x08, 0x47, 0x61, 0x6d, 0x65,
+	0x72, 0x73, 0x70, 0x62, 0xe2, 0x02, 0x14, 0x47, 0x61, 0x6d, 0x65, 0x72, 0x73, 0x70, 0x62, 0x5c,
+	0x47, 0x50, 0x42, 0x4d, 0x65, 0x74, 0x61, 0x64, 0x61, 0x74, 0x61, 0xea, 0x02, 0x08, 0x47, 0x61,
+	0x6d, 0x65, 0x72, 0x73, 0x70, 0x62, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -293,23 +491,34 @@ func file_gamerspb_api_proto_rawDescGZIP() []byte {
 	return file_gamerspb_api_proto_rawDescData
 }
 
-var file_gamerspb_api_proto_msgTypes = make([]protoimpl.MessageInfo, 4)
+var file_gamerspb_api_proto_msgTypes = make([]protoimpl.MessageInfo, 8)
 var file_gamerspb_api_proto_goTypes = []interface{}{
 	(*CreateGamerRequest)(nil),      // 0: gamerspb.CreateGamerRequest
 	(*CreateGamerResponse)(nil),     // 1: gamerspb.CreateGamerResponse
 	(*DisapproveGamerRequest)(nil),  // 2: gamerspb.DisapproveGamerRequest
 	(*DisapproveGamerResponse)(nil), // 3: gamerspb.DisapproveGamerResponse
+	(*GetGamerRequest)(nil),         // 4: gamerspb.GetGamerRequest
+	(*GetGamerResponse)(nil),        // 5: gamerspb.GetGamerResponse
+	(*GetGamersRequest)(nil),        // 6: gamerspb.GetGamersRequest
+	(*GetGamersResponse)(nil),       // 7: gamerspb.GetGamersResponse
+	(*Gamer)(nil),                   // 8: gamerspb.Gamer
 }
 var file_gamerspb_api_proto_depIdxs = []int32{
-	0, // 0: gamerspb.GamersService.CreateGamer:input_type -> gamerspb.CreateGamerRequest
-	2, // 1: gamerspb.GamersService.DisapproveGamer:input_type -> gamerspb.DisapproveGamerRequest
-	1, // 2: gamerspb.GamersService.CreateGamer:output_type -> gamerspb.CreateGamerResponse
-	3, // 3: gamerspb.GamersService.DisapproveGamer:output_type -> gamerspb.DisapproveGamerResponse
-	2, // [2:4] is the sub-list for method output_type
-	0, // [0:2] is the sub-list for method input_type
-	0, // [0:0] is the sub-list for extension type_name
-	0, // [0:0] is the sub-list for extension extendee
-	0, // [0:0] is the sub-list for field type_name
+	8, // 0: gamerspb.GetGamerResponse.gamer:type_name -> gamerspb.Gamer
+	8, // 1: gamerspb.GetGamersResponse.gamers:type_name -> gamerspb.Gamer
+	0, // 2: gamerspb.GamersService.CreateGamer:input_type -> gamerspb.CreateGamerRequest
+	2, // 3: gamerspb.GamersService.DisapproveGamer:input_type -> gamerspb.DisapproveGamerRequest
+	4, // 4: gamerspb.GamersService.GetGamer:input_type -> gamerspb.GetGamerRequest
+	6, // 5: gamerspb.GamersService.GetGamers:input_type -> gamerspb.GetGamersRequest
+	1, // 6: gamerspb.GamersService.CreateGamer:output_type -> gamerspb.CreateGamerResponse
+	3, // 7: gamerspb.GamersService.DisapproveGamer:output_type -> gamerspb.DisapproveGamerResponse
+	5, // 8: gamerspb.GamersService.GetGamer:output_type -> gamerspb.GetGamerResponse
+	7, // 9: gamerspb.GamersService.GetGamers:output_type -> gamerspb.GetGamersResponse
+	6, // [6:10] is the sub-list for method output_type
+	2, // [2:6] is the sub-list for method input_type
+	2, // [2:2] is the sub-list for extension type_name
+	2, // [2:2] is the sub-list for extension extendee
+	0, // [0:2] is the sub-list for field type_name
 }
 
 func init() { file_gamerspb_api_proto_init() }
@@ -367,6 +576,54 @@ func file_gamerspb_api_proto_init() {
 				return nil
 			}
 		}
+		file_gamerspb_api_proto_msgTypes[4].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*GetGamerRequest); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_gamerspb_api_proto_msgTypes[5].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*GetGamerResponse); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_gamerspb_api_proto_msgTypes[6].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*GetGamersRequest); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_gamerspb_api_proto_msgTypes[7].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*GetGamersResponse); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
 	}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
@@ -374,7 +631,7 @@ func file_gamerspb_api_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_gamerspb_api_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   4,
+			NumMessages:   8,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
