# modules/gamers/internal/endpoint/grpc/server.go
@@ -5,6 +5,8 @@ import (
 	"github.com/a-aslani/golang_monolith_event_driven_architecture/modules/gamers/gamerspb"
 	"github.com/a-aslani/golang_monolith_event_driven_architecture/modules/gamers/internal/application"
 	"github.com/a-aslani/golang_monolith_event_driven_architecture/modules/gamers/internal/application/commands"
+	"github.com/a-aslani/golang_monolith_event_driven_architecture/modules/gamers/internal/application/queries"
+	"github.com/a-aslani/golang_monolith_event_driven_architecture/modules/gamers/internal/domain"
 	"github.com/google/uuid"
 	"google.golang.org/grpc"
 )
@@ -16,7 +18,7 @@ type server struct {
 
 var _ gamerspb.GamersServiceServer = (*server)(nil)
 
-func RegisterServer(ctx context.Context, app application.App, registrar grpc.ServiceRegistrar) error {
+func RegisterServer(_ context.Context, app application.App, registrar grpc.ServiceRegistrar) error {
 	gamerspb.RegisterGamersServiceServer(registrar, server{app: app})
 	return nil
 }
@@ -57,4 +59,40 @@ func (s server) CreateGamer(ctx context.Context, request *gamerspb.CreateGamerRe
 	return &gamerspb.CreateGamerResponse{
 		Id: gamerID,
 	}, nil
+}
+
+func (s server) GetGamer(ctx context.Context, request *gamerspb.GetGamerRequest) (*gamerspb.GetGamerResponse, error) {
+
+	gamer, err := s.app.GetGamer(ctx, queries.GetGamer{ID: request.GetId()})
+	if err != nil {
+		return nil, err
+	}
+
+	return &gamerspb.GetGamerResponse{Gamer: s.gamerFromDomain(gamer)}, err
+}
+
+func (s server) GetGamers(ctx context.Context, request *gamerspb.GetGamersRequest) (*gamerspb.GetGamersResponse, error) {
+
+	gamers, err := s.app.GetGamers(ctx, queries.GetGamers{})
+	if err != nil {
+		return nil, err
+	}
+
+	protoGamers := make([]*gamerspb.Gamer, 0)
+
+	for _, item := range gamers {
+		protoGamers = append(protoGamers, s.gamerFromDomain(item))
+	}
+
+	return &gamerspb.GetGamersResponse{Gamers: protoGamers}, err
+}
+
+func (s server) gamerFromDomain(gamer *domain.GamerDTO) *gamerspb.Gamer {
+	return &gamerspb.Gamer{
+		Id:         gamer.ID,
+		FirstName:  gamer.FirstName,
+		LastName:   gamer.LastName,
+		Email:      gamer.Email,
+		IsApproved: gamer.IsApproved,
+	}
 }
